# unification

./: .gitignore  README.md  dune-project  unification.opam
lib/: atomic_term.ml  backtracking_references.ml  dune  href.ml  story.ml  term.ml  unification.ml
test/: atomic_term_test.ml  backtracking_references_test.ml  dune  example1.ml  example2.ml  href_test.ml  story_test.ml  unification_test.ml
