(library
 (public_name unification)
 (name unification)
 (libraries backtracking_references)
 (modules unification))

(library
 (name backtracking_references)
 (public_name unification.backtracking_references)
 (libraries story)
 (modules backtracking_references))

(library
 (name story)
 (public_name unification.story)
 (modules story))
