(library
 (public_name unification)
 (name unification)
 (libraries backtracking_references atomic_term)
 (modules unification))

(library
 (public_name unification.atomic_term)
 (name atomic_term)
 (libraries term)
 (modules atomic_term))

(library
 (public_name unification.term)
 (name term)
 (modules term))

(library
 (name backtracking_references)
 (public_name unification.backtracking_references)
 (libraries story)
 (modules backtracking_references))

(library
 (name story)
 (public_name unification.story)
 (modules story))
