(test
 (name example1)
 (libraries unification)
 (modules example1))

(test
 (name example2)
 (libraries unification)
 (modules example2))

(test
 (name backtracking_references_test)
 (libraries backtracking_references)
 (modules backtracking_references_test))

(test
 (name story_test)
 (libraries story)
 (modules story_test))
